# peek

./: .releaserc.json  Cargo.toml  package.json
.claude/: settings.json
.github/workflows/: release.yml
assets/: com.peek.daemon.plist
crates/peek-cli/: Cargo.toml
crates/peek-cli/src/: main.rs
crates/peek-core/: Cargo.toml
crates/peek-core/src/: fuzzy.rs  lib.rs  protocol.rs  tools.rs
crates/peek-core/tests/: scanner_tests.rs
crates/peek-core/tests/fixtures/cargo-project/: Cargo.toml
crates/peek-core/tests/fixtures/compose-project/: docker-compose.yml
crates/peek-core/tests/fixtures/makefile-project/: Makefile
crates/peek-core/tests/fixtures/node-npm/: package.json
crates/peek-core/tests/fixtures/node-pnpm/: package.json
crates/peek-shell/: Cargo.toml
crates/peek-shell/src/: bash.rs  fish.rs  lib.rs  zsh.rs
crates/peek-tui/: Cargo.toml
crates/peek-tui/src/: dropdown.rs  line_tracker.rs  main.rs  overlay.rs  pty.rs  tui.rs
crates/peekd/: Cargo.toml
crates/peekd/src/: cache.rs  config.rs  frecency.rs  main.rs  scanner.rs  server.rs  watcher.rs
docs/superpowers/specs/: 2026-04-23-peek-design.md
overlay/: peek-overlay.swift
shell/: peek.bash  peek.fish  peek.zsh
