[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.2.4"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
nucleo = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
crossterm = "0.28"
anyhow = "1"
dirs = "6"

# Internal crates
peek-core = { path = "crates/peek-core" }
peek-shell = { path = "crates/peek-shell" }
