[package]
name = "peek-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "peek"
path = "src/main.rs"

[dependencies]
peek-core = { workspace = true }
peek-shell = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
libc = "0.2"
