[package]
name = "peekd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
peek-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
